--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2"
