--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/jest": "^29.5.14",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.32.1"
   }
 }
